[gd_scene load_steps=4 format=3 uid="uid://bl2btp6irrfcg"]

[ext_resource type="Script" uid="uid://ciraeenicj366" path="res://scripts/gameplay/slot/slot_viz.gd" id="1_40xr8"]
[ext_resource type="Resource" uid="uid://bjb87p4l62gad" path="res://resources/data/slot/hit.tres" id="2_r56d6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_so0dm"]
size = Vector2(200, 300)

[node name="SlotViz" type="Node2D"]
script = ExtResource("1_40xr8")
slot_data = ExtResource("2_r56d6")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_so0dm")
debug_color = Color(0.14787018, 0.5960515, 0.677478, 0.41960785)

[node name="Visuals" type="Node2D" parent="."]

[node name="Panel" type="Panel" parent="Visuals"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -150.0
offset_right = 100.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Visuals"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -200.0
offset_right = 100.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
text = "Title"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="input_event" from="Area2D" to="." method="_on_area_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_mouse_exited"]
